<resources>
    <string name="app_name">CorpoD21</string>
    <string name="stringEmpty"></string>

    <string name="modulos">Módulos</string>
    <string name="bonus">Bônus</string>
    <string name="por_olivia">Por: Olivia Andriolo</string>
    <string name="dieta_c21">Dieta CorpoD21</string>
    <string name="detox_2_dias">Detox 2 dias</string>
    <string name="bonus_abdomen">Bônus abdômen</string>
    <string name="ex_abdomen_5">5 Exercícios para abdômen</string>
    <string name="pilates_casa">Pilátes em casa"</string>
    <string name="faca_voce">Faça você mesma</string>

    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="agora_nao">Agora não</string>
    <string name="mais_tarde">Mais tarde</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="LinkPrograma">Caso ainda não possua nosso programa, <a href="http://www.corpode21.com.br">clique aqui.</a></string>
    <string name="QuaseLa">Estamos quase lá, preencha os campos abaixo para iniciarmos.</string>
    <string name="LinkPrivacidade">Ao continuar, você aceita nossa política de privacidade.</string>

    <string name="msg_erro_email">E-mail inválido.</string>
    <string name="msg_erro_senha">Senha inválida.</string>

    <string name="msg_campo_requirido">Por favor, preencha este campo.</string>
    <string name="openDrawer">Aberto</string>
    <string name="closeDrawer">Fechado</string>

    <string name="hora_Cafe">07:00</string>
    <string name="hora_LancheManha">09:30</string>
    <string name="hora_Almoco">12:00</string>
    <string name="hora_LancheTarde">15:30</string>
    <string name="hora_Jantar">19:00</string>
    <string name="hora_Ceia">22:00</string>


    <string name="title_activity_login_activity2">LoginActivity2</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="primeiro_dia">1° dia</string>
    <string name="segundo_dia">2° dia</string>
    <string name="terceiro_dia">3° dia</string>
    <string name="quarto_dia">4° dia</string>
    <string name="quinto_dia">5° dia</string>
    <string name="sexto_set_dia">6° e 7° dia</string>

    <string name="dia1">Dia 1</string>
    <string name="dia2">Dia 2</string>
    <string name="dia3">Dia 3</string>
    <string name="dia4">Dia 4</string>
    <string name="dia5">Dia 5</string>
    <string name="dia6">Dia 6</string>


    <string name="alongamento_c21">Alongamento - Corpo de 21</string>

    <string name="contracao">Contração</string>
    <string name="respiracao">Respiração</string>
    <string name="ex_abdomen">Ex. para abdômen</string>
    <string name="ex_pernas_gluteos">Exercícios para Pernas e Glúteos</string>
    <string name="ex_bracos">Exercícios para Braços</string>

    <string name="super_queima">Super Queima</string>
    <string name="top_treino">TOP Treino</string>
    <string name="rapido_e_furioso">Rápido e Furioso</string>
    <string name="descanso">Descanso</string>
    <string name="alongamento">Alongamento\nPreferencialmente sábado e domingo</string>
    <string name="ex_abdomen_m1">Exercícios para Abdômen (Módulo 1)</string>
    <string name="repita">Repita os 3 exercícios anteriores. Todos hoje.</string>

    <string name="url_base_video">http://www.orbitaldev.com.br/video/</string>

    <string name="video_alongamento_c21">alongamento</string>
    <string name="video_contracao">contracao</string>
    <string name="video_respiracao">respiracao</string>
    <string name="video_modulo_abdomen">modulo-abdomen</string>
    <string name="video_pernas_gluteos">pernas-gluteos</string>
    <string name="video_bracos">bracos</string>
    <string name="video_dia5">dia5</string>

    <string name="video_super_queima">super-queima</string>
    <string name="video_top_treino">top-treino</string>
    <string name="video_rapido_furioso">rapido-furioso</string>

    <string name="video_bonus_abdomen">bonus-abdomen</string>
    <string name="video_bonus_pilates">7min-pilates</string>


    <string name="pdf_detox_2_dias">detox-corpode21.pdf</string>
    <string name="pdf_dieta_c21">dieta-corpode21.pdf</string>

    <string name="cafe_manha">Café da Manhã</string>
    <string name="lanche_manha">Lanche da Manhã</string>
    <string name="almoco">Almoço</string>
    <string name="lanche_tarde">Lanche da Tarde</string>
    <string name="jantar">Jantar</string>
    <string name="ceia">Ceia</string>

    <string name="medidas">Medidas</string>

    <string name="inicial">Inicial</string>
    <string name="atual">Atual</string>

    <string name="biceps">Biceps (cm)</string>
    <string name="cintura">Cintura (cm)</string>
    <string name="quadril">Quadril (cm)</string>
    <string name="perna">Perna (cm)</string>

    <string name="cafe_manha_item">Farelo de Aveia</string>
    <string name="cafe_manha_item_qtd">2 colheres</string>
    <string name="title_activity_teste_notificacao">TesteNotificacao</string>
    <string name="title_activity_detalhe">DetalheActivity</string>
    <string name="title_activity_evolucao">EvolucaoActivity</string>
    <string name="title_activity_modulos">ModulosActivity</string>
    <string name="title_activity_n">NActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_video_test">VideoTestActivity</string>
    <string name="title_activity_bonus_detox">BonusDetoxActivity</string>

    <string name="titulo_evolucao">Evolução</string>
    <string name="titulo_contato">Contato</string>
    <string name="selecione_assunto">Selecione um assunto</string>

    <string name="mensagem_aguarde">Por favor, aguarde...</string>
    <string name="mensagem_conexao">Por favor, verifique a conexão com a internet e tente novamente.</string>
    <string name="mensagem_pdf">Nenhum visualizador de PDF encontrado.</string>

    <string-array name="assuntos_contato">
        <item>Dúvidas</item>
        <item>Sugestões</item>
        <item>Reclamações</item>
        <item>Outros</item>
    </string-array>

    <string name="duvidas_frequentes">Dúvidas Frequentes</string>
    <string name="titulo_duvidas_frequentes">Confira abaixo as 10 perguntas mais frequentes.</string>
    <string name="titulo_resposta_duvidas_frequentes">Antes de entrar em contato conosco, veja se sua dúvida foi respondida abaixo:</string>

    <string name="pergunta1_duvidas_frequentes">1 - Pergunta 1 ?</string>
    <string name="resposta1_duvidas_frequentes"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>

    <string name="pergunta2_duvidas_frequentes">2 - Pergunta 2 ?</string>
    <string name="resposta2_duvidas_frequentes">Lorem ipos asd resposta.</string>

    <string name="pergunta3_duvidas_frequentes">3 - Pergunta 3 ?</string>
    <string name="resposta3_duvidas_frequentes">Lorem ipos asd resposta.</string>
    <string name="title_activity_contato">ContatoActivity</string>
    <string name="title_activity_medidas">MedidasActivity</string>


    <string name="c21_userLogin_Token">contato@corpode21.com.br</string>
    <string name="c21_userPass_Token">edogap12</string>

    <string name="em_construcao">Em Construção</string>

    <string name="titulo_sair">Sair</string>
    <string name="saida_confirmacao">Deseja realmente sair do CorpoD21?</string>


    <string name="evolucao_p1">Parabéns, continue assim.</string>
    <string name="evolucao_p2">Você está evoluindo muito bem.</string>
    <string name="evolucao_p3">Não desista agora, estamos quase lá!</string>
    <string name="evolucao_p4">Parabéns, você alcançou sua meta!</string>

    <string name="treinamento_c21">Treinamento CorpoD21</string>
    <string name="msg_conexao">É recomendado o download dos nossos vídeos via Wi-Fi, ou poderá ocorrer cobranças adicionais em seu pacote de dados.
        Uma vez baixado, você não precisará baixa-lo novamente. Deseja continuar ? </string>





</resources>



