<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="30dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_duvidas_frequentes"
            style="@style/cardapio_titulo"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta1_duvidas_frequentes"
            style="@style/cardapio_item"
            android:textSize="16sp"
            android:padding="10dp"
            android:id="@+id/pergunta1"
            android:tag="pergunta1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta2_duvidas_frequentes"
            style="@style/cardapio_item"
            android:textSize="16sp"
            android:padding="10dp"
            android:id="@+id/pergunta2"
            android:tag="pergunta2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta3_duvidas_frequentes"
            style="@style/cardapio_item"
            android:textSize="16sp"
            android:padding="10dp"
            android:id="@+id/pergunta3"
            android:tag="pergunta3"/>

    </LinearLayout>

</ScrollView>