<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/viewChart"
            android:orientation="vertical"></LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medidas"
                android:layout_above="@+id/iniPerna"
                android:layout_alignRight="@+id/textView5"
                android:layout_alignEnd="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicial"
                android:id="@+id/textView7"
                android:layout_alignTop="@+id/iniPerna"
                android:layout_alignLeft="@+id/textView9"
                android:layout_alignStart="@+id/textView9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atual"
                android:id="@+id/textView4"
                android:layout_below="@+id/viewChart"
                android:layout_toRightOf="@+id/textView7"
                android:layout_toEndOf="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biceps"
                style="@style/cardapio_titulo"
                android:id="@+id/textView9"
                android:layout_below="@+id/iniPerna"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22"
                style="@style/cardapio_titulo"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/iniBiceps"
                android:layout_above="@+id/atualBiceps"
                android:layout_alignLeft="@+id/atualBiceps"
                android:layout_alignStart="@+id/atualBiceps" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22"
                style="@style/cardapio_titulo"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/atualBiceps"
                android:layout_alignTop="@+id/textView6"
                android:layout_alignLeft="@+id/iniCintura"
                android:layout_alignStart="@+id/iniCintura" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cintura"
                style="@style/cardapio_titulo"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/textView8"
                android:layout_below="@+id/atualCintura"
                android:layout_alignRight="@+id/textView5"
                android:layout_alignEnd="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22"
                style="@style/cardapio_titulo"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/iniCintura"
                android:layout_alignBaseline="@+id/atualPerna"
                android:layout_alignBottom="@+id/atualPerna"
                android:layout_alignLeft="@+id/atualCintura"
                android:layout_alignStart="@+id/atualCintura" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22"
                style="@style/cardapio_titulo"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/atualCintura"
                android:layout_alignRight="@+id/iniPerna"
                android:layout_alignEnd="@+id/iniPerna"
                android:layout_alignTop="@+id/atualPerna" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quadril"
                style="@style/cardapio_titulo"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_below="@+id/textView5"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_marginTop="32dp"
                android:id="@+id/textView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22"
                style="@style/cardapio_titulo"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/iniQuadril"
                android:layout_above="@+id/textView8"
                android:layout_alignLeft="@+id/iniPerna"
                android:layout_alignStart="@+id/iniPerna" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22"
                style="@style/cardapio_titulo"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/atualQuadril"
                android:layout_above="@+id/textView8"
                android:layout_alignLeft="@+id/iniPerna"
                android:layout_alignStart="@+id/iniPerna" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perna"
                style="@style/cardapio_titulo"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/textView5"
                android:layout_alignTop="@+id/textView9"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22"
                style="@style/cardapio_titulo"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/iniPerna"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView4"
                android:layout_toEndOf="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22"
                style="@style/cardapio_titulo"
                android:layout_weight="1"
                android:textSize="16sp"
                android:id="@+id/atualPerna"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp" />



        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Atualizar Dados"
            android:background="@color/VermelhoBotao"
            android:textColor="@color/TextoBranco"
            android:id="@+id/btnLogin"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="40dp" />

    </RelativeLayout>



</LinearLayout>